--- a/src/Forest.UI/Properties/launchSettings.json
+++ b/src/Forest.UI/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "Forest.UI": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "lsedit.lin"
     }
   }
 }
