Call linui with arguments passed to standalone installer

--- a/src/Forest.UI/Forest.UI.csproj
+++ b/src/Forest.UI/Forest.UI.csproj
@@ -9,6 +9,7 @@
 		<AssemblyName>linui</AssemblyName>
 		<ApplicationManifest>app.manifest</ApplicationManifest>
 		<ApplicationIcon>Resources\cd.ico</ApplicationIcon>
+		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 	</PropertyGroup>
 
 	<ItemGroup>
