Add proper version info for linbsc

--- a/src/Losch.Installer.Compiler/Losch.Installer.Compiler.csproj
+++ b/src/Losch.Installer.Compiler/Losch.Installer.Compiler.csproj
@@ -6,5 +6,6 @@
 		<AssemblyName>linbsc</AssemblyName>
 		<Platforms>AnyCPU;x64</Platforms>
 		<UseWPF>true</UseWPF>
+		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 	</PropertyGroup>
 </Project>
